Add Photgraphy selection

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "music site",
   "main": "index.js",
+  "engines": {
+    "node": "14.2.0",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:client": "webpack --watch",
@@ -34,20 +38,22 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "chalk": "^4.1.0",
     "commentbox.io": "^2.0.0",
-    "contentful": "^7.14.6",
-    "contentful-management": "^6.1.1",
-    "create-react-class": "^15.6.3",
+    "contentful": "^8.1.7",
+    "contentful-management": "^7.5.4",
+    "create-react-class": "^15.7.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "googleapis": "^60.0.1",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jss": "^9.8.7",
     "mdbreact": "^4.27.0",
     "node-dev": "^4.3.0",
     "nodemailer": "^6.4.11",
