--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^3.9.4",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -46,6 +46,7 @@
     "commentbox.io": "^2.0.0",
     "contentful": "^8.1.7",
     "contentful-management": "^7.5.4",
+    "core-js": "^3.8.3",
     "create-react-class": "^15.7.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.3",
@@ -71,6 +72,7 @@
     "react-easy-edit": "^1.11.0",
     "react-hook-form": "^6.0.8",
     "react-iframe": "^1.8.0",
+    "react-native": "^0.63.4",
     "react-native-email-action": "^1.0.6",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
