Added Mailchip contact form

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "chalk": "^4.1.0",
     "commentbox.io": "^2.0.0",
     "contentful": "^8.1.7",
@@ -57,6 +57,7 @@
     "jss": "^9.8.7",
     "mdbreact": "^4.27.0",
     "node-dev": "^4.3.0",
+    "node-mandrill": "^1.0.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
@@ -74,6 +75,7 @@
     "react-iframe": "^1.8.0",
     "react-native": "^0.63.4",
     "react-native-email-action": "^1.0.6",
+    "react-native-webview": "^11.2.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "react-share": "^4.2.1",
