--- a/package.json
+++ b/package.json
@@ -27,22 +27,25 @@
   },
   "homepage": "https://github.com/pvherreramusic/pvherrearmusicwebsite.git/",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.1.0",
     "faker": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.4",
+    "Babel": "0.0.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "chalk": "^4.1.0",
+    "chokidar": "^3.5.1",
     "commentbox.io": "^2.0.0",
     "contentful": "^8.1.7",
     "contentful-management": "^7.5.4",
@@ -51,6 +54,7 @@
     "dotenv": "^8.2.0",
     "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
+    "fsevents": "^2.3.2",
     "googleapis": "^60.0.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -59,7 +63,7 @@
     "node-dev": "^4.3.0",
     "node-mandrill": "^1.0.1",
     "nodemailer": "^6.4.11",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.7",
     "pg": "^8.3.0",
     "rc-select": "^11.1.6",
     "react": "^16.13.1",
@@ -73,15 +77,17 @@
     "react-easy-edit": "^1.11.0",
     "react-hook-form": "^6.0.8",
     "react-iframe": "^1.8.0",
-    "react-native": "^0.63.4",
+    "react-native": "^0.58.6",
+    "react-native-clean-project": "^3.6.3",
     "react-native-email-action": "^1.0.6",
-    "react-native-webview": "^11.2.3",
+    "react-native-webview": "^11.4.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "react-share": "^4.2.1",
     "reactstrap": "^8.6.0",
     "semantic-ui-react": "^0.88.2",
     "sendemail": "^4.0.1",
-    "underscore": "^1.10.2"
+    "underscore": "^1.10.2",
+    "upgrade": "^1.1.0"
   }
 }
